# omni-cli

./: README.md  pyproject.toml
docs/: benchmark-plan.md  notes.md  todo.md
docs/docker/: Makefile  README.md  dockerfile.omnicli  entrypoint.sh
omni_cli/: benchmarks.py  cli.py  config.py  datasets.py  docker.py  epoch.py  graph.py  orchestrator.py  plot.py  plugin.py  resource.py  sparql.py  workflow.py
omni_cli/docs/docker/: Makefile  dockerfile.omnicli
