[tool.poetry]
name = "omni-cli"
version = "0.1.0"
description = ""
authors = ["btraven <btraven@sdf.org>"]
readme = "README.md"
packages = [{include = "omni_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
# renku so far is pinning a specific version of requests. trying to run against latest instead
# renku = "^1.7.1"
# renku = "^2.3.1"
requests = "<2.28.2"
pyyaml = "^6.0"
pydantic = "^1.10.2"
renku = "^2.3.2"
omnibenchmark = {git = "https://github.com/omnibenchmark/omnibenchmark-py", rev = "renku_2_3_0"}

[tool.poetry.scripts]
omni_cli = 'omni_cli.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


