[tool.poetry]
name = "omni-cli"
version = "0.1.0"
description = ""
authors = ["btraven <btraven@sdf.org>"]
readme = "README.md"
packages = [{include = "omni_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "<2.28.2"
pyyaml = "^6.0"
pydantic = "^1.10.2"
renku = "^2.3.2"
omnibenchmark = {git = "https://github.com/omnibenchmark/omnibenchmark-py", rev = "renku_2_3_0"}

[tool.poetry.scripts]
omni_cli = 'omni_cli.cli:run'

[tool.poetry.plugins."renku"]
activity_annotations = 'omni_cli.plugin.activity_annotations'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


